[metadata]
name = parts_scraper
version = 0.0.1
author = Stevan Thomas
author_email = stevansunny@gmail.com
description = A package that scrapes prices of parts on rockauto.com
long_description = file:README.md
url=https://github.com/stevanthomas/rockauto-scraping
project_urls = 
	Bug Tracker = https://github.com/stevanthomas/rockauto-scraping/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	 = parts_scraper
packages = find:
python_requires >= 3.6

[options.packages.find]
where = parts_scraper
